# ulak-gcs

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.local.json
.github/workflows/: validation.yml
build_vs/: CMakeCache.txt
config/: gcs_defaults.json  settings.json
config/profiles/: aggressive.json  default.json  safe.json
docs/: ROADMAP.md
docs/adr/: 002-gcs-profiles.md  003-panic-button-system.md
docs/design/: Architecture.md  PROTOCOL.md  Structure.md  checklist.md
docs/spec/: ecosystem.md  exception-handling.md  panic-button.md  polisher.md
docs/sprints/: sprint-01.md  sprint-02.md  sprint-03.md  sprint-04.md  sprint-05.md  sprint-06.md
scenarios/normal_mission/first/opencv-driven/: scenario.md
scenarios/normal_mission/first/set_coord/: scenario.md
src/app/: BootstrapConfig.cpp  BootstrapConfig.h  CMakeLists.txt  main.cpp
src/core/: AppConfig.cpp  AppConfig.h  CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.h  ExceptionClassifier.cpp  ExceptionClassifier.h  PanicManager.cpp  PanicManager.h  ProfileLoader.cpp  ProfileLoader.h  ProfileManager.cpp  ProfileManager.h
src/core/missions/first_mission/: pole_coord_driven.py
src/models/: CMakeLists.txt  GcsCommand.cpp  GcsCommand.h  MissionState.h  PerceptionTarget.h  StreamMode.cpp  StreamMode.h  TelemetryFrame.h
src/utils/: CMakeLists.txt  JsonUtils.cpp  JsonUtils.h
tests/: CMakeLists.txt  error_counter.cpp  panic_button.cpp  profile_data_parse.cpp  test_bootstrap_config.cpp  test_command_serialize.cpp  test_config_loader.cpp
